--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 body{
   /* background: #60b6d5; */
-  background-image: url("istockphoto-1320842227-170667a.jpg");
+  background-image: url("./img/istockphoto-1320842227-170667a.jpg");
   background-repeat: no-repeat;
   background-size: 1535px 713px;
 }
